maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:12: error: not found: value prendsBiscuit
  prendsBiscuit()
  ^